@@ -159,7 +159,7 @@ public class NewtonRefinementManager implements StatisticsProvider {
             };
         // Test if the predicate of the error state is unsatisfiable
         try {
-          if (!solver.isUnsat(predicates.get(predicates.size() - 1))) {
+          if (!solver.isUnsat(predicates.getLast())) {
             throw new RefinementFailedException(Reason.SequenceOfAssertionsToWeak, pAllStatesTrace);
           }
         } catch (SolverException e) {
@@ -263,7 +263,7 @@ public class NewtonRefinementManager implements StatisticsProvider {
   }
 
   /**
-   * Calculates the StrongestPostCondition at all states on a error-trace.
+   * Calculates the StrongestPostCondition at all states on an error-trace.
    *
    * @param pPathLocations A list with the necessary information to all path locations
    * @param pUnsatCore An optional holding the unsatisfiable core in the form of a list of Formulas.
@@ -337,7 +337,7 @@ public class NewtonRefinementManager implements StatisticsProvider {
               break;
             }
 
-            // Throw an exception if the type of the Edge is none of the above but it holds a
+            // Throw an exception if the type of the Edge is none of the above, but it holds a
             // PathFormula
             throw new UnsupportedOperationException(
                 "Found unsupported EdgeType in Newton Refinement: "
@@ -355,7 +355,7 @@ public class NewtonRefinementManager implements StatisticsProvider {
         preCondition = postCondition;
       }
 
-      // Remove the last predicate as it is should be false
+      // Remove the last predicate as it should be false
       return ImmutableList.copyOf(predicates);
     } finally {
       stats.postConditionTimer.stop();
@@ -379,7 +379,7 @@ public class NewtonRefinementManager implements StatisticsProvider {
 
     // If this formula should be abstracted(no requiredPart), this statement havocs the leftHand
     // variable
-    // Therefore its previous values can be existentially quantified in the preCondition
+    // Therefore, its previous values can be existentially quantified in the preCondition
     if (!requiredPart.isEmpty()) {
       toExist = bfmgr.and(preCondition, bfmgr.and(requiredPart));
     } else {
@@ -660,7 +660,7 @@ public class NewtonRefinementManager implements StatisticsProvider {
     /**
      * Check if the location has a corresponding ARGState
      *
-     * @return true iff there is a ARGState associated to the location
+     * @return whether there is an ARGState associated to the location
      */
     boolean hasCorrespondingARGState() {
       return state.isPresent();
@@ -669,7 +669,7 @@ public class NewtonRefinementManager implements StatisticsProvider {
     /**
      * Check if the location has a corresponding Abstraction state
      *
-     * @return true iff there is an corresponding state and this state also is an abstraction state
+     * @return whether there is a corresponding state and this state also is an abstraction state
      */
     boolean hasAbstractionState() {
       if (hasCorrespondingARGState()) {
